fix(ci): shellcheck SC2086 + add featureInProgress i18n key [AGENT-001-A]

--- a/i18n/sources/reports.translations.json
+++ b/i18n/sources/reports.translations.json
@@ -40,6 +40,7 @@
     "reports.tabs.title": "Report Workspace",
     "reports.tabs.viewer": "Report Viewer",
     "reports.title": "Reports",
+    "reports.toast.featureInProgress": "New report feature coming soon",
     "reports.toast.newReportComingSoon": "New report feature coming soon",
     "reports.types.compliance": "Compliance",
     "reports.types.financial": "Financial",
@@ -88,6 +89,7 @@
     "reports.tabs.title": "مساحة عمل التقارير",
     "reports.tabs.viewer": "عارض التقارير",
     "reports.title": "التقارير",
+    "reports.toast.featureInProgress": "ميزة إنشاء التقارير الجديدة قادمة قريباً",
     "reports.toast.newReportComingSoon": "ميزة إنشاء التقارير الجديدة قادمة قريباً",
     "reports.types.compliance": "الامتثال",
     "reports.types.financial": "مالي",
