fix(i18n): Add missing fm.properties.creating translation key [AGENT-001-A]

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -3446,6 +3446,7 @@
       "selectType": "اختر النوع",
       "title": "العقارات",
       "create": "إضافة عقار",
+      "creating": "جاري إنشاء العقار...",
       "view": "عرض العقارات",
       "edit": "تعديل عقار",
       "delete": "حذف عقار",
