--- a/i18n/chunks/en/fm/assets.json
+++ b/i18n/chunks/en/fm/assets.json
@@ -1,14 +1,24 @@
 {
   "fm.assets.actions.addAsset": "Add Asset",
   "fm.assets.actions.newAsset": "New Asset",
+  "fm.assets.card.actions.deleteLabel": "Delete asset {{name}}",
+  "fm.assets.card.actions.editLabel": "Edit asset {{name}}",
+  "fm.assets.card.actions.viewLabel": "View asset {{name}}",
   "fm.assets.card.category": "Category:",
   "fm.assets.card.criticality": "Criticality:",
+  "fm.assets.card.edit.title": "Edit Asset",
   "fm.assets.card.floor": "Floor {{floor}}",
   "fm.assets.card.lastMaintenance": "Last Maintenance:",
   "fm.assets.card.location": "Location:",
   "fm.assets.card.never": "Never",
   "fm.assets.card.room": "Room {{room}}",
   "fm.assets.card.type": "Type:",
+  "fm.assets.card.view.category": "Category",
+  "fm.assets.card.view.code": "Code",
+  "fm.assets.card.view.criticality": "Criticality",
+  "fm.assets.card.view.location": "Location",
+  "fm.assets.card.view.status": "Status",
+  "fm.assets.card.view.type": "Type",
   "fm.assets.dialog.title": "Add New Asset",
   "fm.assets.empty.subtitle": "Get started by adding your first asset to the registry.",
   "fm.assets.empty.title": "No Assets Found",
@@ -42,6 +52,7 @@
   "fm.assets.form.labels.manufacturer": "Manufacturer",
   "fm.assets.form.labels.model": "Model",
   "fm.assets.form.labels.name": "Asset Name *",
+  "fm.assets.form.labels.property": "Property *",
   "fm.assets.form.labels.serial": "Serial Number",
   "fm.assets.form.labels.status": "Status",
   "fm.assets.form.labels.type": "Type *",
