fix: Address Codex review findings - timezone, SSE heartbeat, bulk actions [AGENT-001-A]
## Code Review Findings Fixed:

### High Priority:
- **business-hours.ts**: Added timezone-aware date parsing using Intl.DateTimeFormat
  - getDayName(), formatDateOnly(), isHoliday(), isBusinessHour() now use config.timezone
  - getNextBusinessHourStart(), getRemainingBusinessHoursToday(), calculateSLADeadline() updated
  - Added getDatePartsInTimeZone() helper for timezone-safe date-part extraction

### Medium Priority:
- **lib/sse/index.ts**: Update lastHeartbeat on successful publishNotification
  - Prevents cleanup interval from evicting active subscriptions
- **BulkActionsToolbar.tsx**: Fixed response mapping + assign guard
  - Use results.processed with fallback to results.success
  - Added client-side guard for assign action (requires assignee selection)
  - Replaced hardcoded UI strings with i18n keys (workOrders.bulk.*)

### Low Priority:
- **claim-service-tenant.test.ts**: Replaced as any casts with type guards
  - Added isRecord() type guard
  - Fixed matches() and collection mock to use Record<string, unknown>
- **tests/unit/lib/sse/index.test.ts**: Added _resetForTesting in afterEach
  - Prevents cleanup interval leaking across tests

## Verification:
- pnpm typecheck: 0 errors
- pnpm lint: 0 warnings
- tests/services/claims/claim-service-tenant.test.ts: 4 passed
- tests/unit/lib/sse/index.test.ts: 14 passed
- tests/unit/lib/sla/business-hours.test.ts: 24 passed
- tests/unit/lib/sla-business-hours.test.ts: 16 passed

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -838,6 +838,20 @@
       "syncSuccess": "Sync complete",
       "syncing": "Syncing..."
     },
+    "bulk": {
+      "selected": "{{count}} selected",
+      "selectedSingle": "1 selected",
+      "confirmAction": "Confirm Action",
+      "affectItems": "This will affect {{count}} item(s).",
+      "cancel": "Cancel",
+      "confirm": "Confirm",
+      "clearSelection": "Clear selection",
+      "approve": "Approve",
+      "reject": "Reject",
+      "assign": "Assign",
+      "delete": "Delete",
+      "assignRequiresSelection": "Assign requires assignee selection."
+    },
     "approvals": {
       "title": "Work Orders Approvals",
       "subtitle": "Manage your approvals",
