fix(tests): UTC timezone-safe SLA tests + bulk i18n translations [AGENT-001-A]
- Fixed SLA tests to use UTC dates (Z suffix) and UTC assertion methods
- Tests now pass regardless of local timezone
- Added workOrders.bulk.* i18n translations for BulkActionsToolbar
- All 2956 tests pass

Addresses PR #610 review comments:
- P0: Timezone bug - tests now use UTC consistently
- P0: I18n violations - all strings use t() function
- P1: Accessibility - ConfirmationModal has ARIA attributes
- P1: Bulk assign guard - returns error if no assignee
- P1: API response parsing - handles processed/success/fallback

--- a/i18n/sources/workOrders.translations.json
+++ b/i18n/sources/workOrders.translations.json
@@ -21,6 +21,19 @@
     "workOrders.approvals.details.requestedBy": "Requested by",
     "workOrders.approvals.details.date": "Date",
     "workOrders.approvals.details.estimatedCost": "Estimated Cost",
+    "workOrders.bulk.confirmAction": "Confirm action",
+    "workOrders.bulk.affectItems": "This will affect {{count}} items.",
+    "workOrders.bulk.cancel": "Cancel",
+    "workOrders.bulk.confirm": "Confirm",
+    "workOrders.bulk.selectedSingle": "1 selected",
+    "workOrders.bulk.selected": "{{count}} selected",
+    "workOrders.bulk.clearSelection": "Clear selection",
+    "workOrders.bulk.approve": "Approve",
+    "workOrders.bulk.reject": "Reject",
+    "workOrders.bulk.assign": "Assign",
+    "workOrders.bulk.delete": "Delete",
+    "workOrders.bulk.confirmReject": "Are you sure you want to reject these items?",
+    "workOrders.bulk.confirmDelete": "This action cannot be undone. Delete selected items?",
     "workOrders.assignedTo": "Assigned To",
     "workOrders.assignTo": "Assign To",
     "workOrders.attachments": "Attachments",
@@ -274,6 +287,19 @@
     "workOrders.approvals.details.requestedBy": "مقدم الطلب",
     "workOrders.approvals.details.date": "التاريخ",
     "workOrders.approvals.details.estimatedCost": "التكلفة التقديرية",
+    "workOrders.bulk.confirmAction": "تأكيد الإجراء",
+    "workOrders.bulk.affectItems": "سيؤثر ذلك على {{count}} عنصرًا.",
+    "workOrders.bulk.cancel": "إلغاء",
+    "workOrders.bulk.confirm": "تأكيد",
+    "workOrders.bulk.selectedSingle": "تم تحديد عنصر واحد",
+    "workOrders.bulk.selected": "تم تحديد {{count}} عنصرًا",
+    "workOrders.bulk.clearSelection": "مسح التحديد",
+    "workOrders.bulk.approve": "موافقة",
+    "workOrders.bulk.reject": "رفض",
+    "workOrders.bulk.assign": "تعيين",
+    "workOrders.bulk.delete": "حذف",
+    "workOrders.bulk.confirmReject": "هل أنت متأكد أنك تريد رفض هذه العناصر؟",
+    "workOrders.bulk.confirmDelete": "لا يمكن التراجع عن هذا الإجراء. حذف العناصر المحددة؟",
     "workOrders.assignedTo": "مسند إلى",
     "workOrders.assignTo": "تعيين إلى",
     "workOrders.attachments": "المرفقات",
