fix: Complete TODO items for Issue #293 - SLA, SSE, Bulk Actions [AGENT-001-A] (#610)
Merged PR #610: Complete TODO items for Issue #293

Fixes applied:
- P0: Timezone bug - SLA calculator uses UTC-based Intl.DateTimeFormat
- P0: I18n violations - BulkActionsToolbar uses t() for all strings  
- P1: SSE memory leak - Connection cleanup with CONNECTION_TIMEOUT_MS
- P1: Accessibility - ConfirmationModal has ARIA attributes
- P1: Bulk assign guard - Returns error if no assignee selected
- P1: API response parsing - Handles processed/success/fallback

All 2956 tests pass locally.

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -838,6 +838,20 @@
       "syncSuccess": "تمت المزامنة بنجاح",
       "syncing": "جاري المزامنة..."
     },
+    "bulk": {
+      "selected": "{{count}} محدد",
+      "selectedSingle": "1 محدد",
+      "confirmAction": "تأكيد الإجراء",
+      "affectItems": "سيؤثر هذا على {{count}} عنصر.",
+      "cancel": "إلغاء",
+      "confirm": "تأكيد",
+      "clearSelection": "مسح التحديد",
+      "approve": "موافقة",
+      "reject": "رفض",
+      "assign": "تعيين",
+      "delete": "حذف",
+      "assignRequiresSelection": "التعيين يتطلب اختيار المكلف."
+    },
     "approvals": {
       "title": "موافقات أوامر العمل",
       "subtitle": "إدارة الموافقات",
@@ -3446,6 +3460,7 @@
       "selectType": "اختر النوع",
       "title": "العقارات",
       "create": "إضافة عقار",
+      "creating": "جاري إنشاء العقار...",
       "view": "عرض العقارات",
       "edit": "تعديل عقار",
       "delete": "حذف عقار",
