fix(assets): PR #611 review fixes - a11y, tests, i18n [AGENT-001-A]
## Review Findings Addressed

1. Test Fix (Finding 6): Updated asset-schemas.test.ts - location is undefined in createAssetFormDefaults (correct behavior). Coordinates now tested via ASSET_DEFAULTS.defaultCoordinates. All 28 tests pass.

2. A11y Fix (Finding 7): Added aria-describedby to EditAssetForm type/category inputs with error IDs. WCAG 2.1 AA compliant.

3. i18n Keys (Finding 1/3): Added fm.assets.form.edit.* and fm.assets.form.actions.update keys in en/ar chunks.

## Verification: typecheck 0 errors, lint 0 errors, vitest 28/28 pass

--- a/i18n/chunks/ar/fm/assets.json
+++ b/i18n/chunks/ar/fm/assets.json
@@ -39,10 +39,15 @@
   "fm.assets.filters.types.security": "أمن",
   "fm.assets.filters.types.vehicle": "مركبة",
   "fm.assets.form.actions.submit": "أنشئ الأصل",
+  "fm.assets.form.actions.update": "حفظ التغييرات",
   "fm.assets.form.criticality.critical": "حرجة",
   "fm.assets.form.criticality.high": "مرتفعة",
   "fm.assets.form.criticality.low": "منخفضة",
   "fm.assets.form.criticality.medium": "متوسطة",
+  "fm.assets.form.edit.error": "حدث خطأ أثناء تحديث الأصل. يرجى المحاولة مرة أخرى.",
+  "fm.assets.form.edit.failed": "تعذّر تحديث الأصل: {{error}}",
+  "fm.assets.form.edit.loading": "جارٍ تحديث الأصل...",
+  "fm.assets.form.edit.success": "تم تحديث الأصل بنجاح",
   "fm.assets.form.error": "حدث خطأ أثناء إنشاء الأصل. يرجى المحاولة مرة أخرى.",
   "fm.assets.form.errors.noOrg": "لم يتم العثور على معرف المؤسسة",
   "fm.assets.form.failed": "تعذّر إنشاء الأصل: {{error}}",
