--- a/i18n/chunks/en/fm/assets.json
+++ b/i18n/chunks/en/fm/assets.json
@@ -39,10 +39,15 @@
   "fm.assets.filters.types.security": "Security",
   "fm.assets.filters.types.vehicle": "Vehicle",
   "fm.assets.form.actions.submit": "Create Asset",
+  "fm.assets.form.actions.update": "Save Changes",
   "fm.assets.form.criticality.critical": "Critical",
   "fm.assets.form.criticality.high": "High",
   "fm.assets.form.criticality.low": "Low",
   "fm.assets.form.criticality.medium": "Medium",
+  "fm.assets.form.edit.error": "Error updating asset. Please try again.",
+  "fm.assets.form.edit.failed": "Failed to update asset: {{error}}",
+  "fm.assets.form.edit.loading": "Updating asset...",
+  "fm.assets.form.edit.success": "Asset updated successfully",
   "fm.assets.form.error": "Error creating asset. Please try again.",
   "fm.assets.form.errors.noOrg": "No organization ID found",
   "fm.assets.form.failed": "Failed to create asset: {{error}}",
