feat(assets): Improve form management and validation in AssetsPage [AGENT-001-A] (#611)
* feat(assets): Improve form management and validation in AssetsPage [AGENT-001-A]

Implements Issue #152 - Assets form improvements:

1. Form Library Integration:
   - Replaced manual useState with react-hook-form
   - Added zodResolver for validation
   - Reduced boilerplate code significantly
   - Better form state management

2. Client-Side Validation with Zod:
   - Created lib/validations/asset-schemas.ts with CreateAssetSchema & UpdateAssetSchema
   - Validates required fields (name, type, category)
   - Validates cost is positive number
   - Validates dates are valid and not in future
   - Validates serialNumber format (alphanumeric with hyphens/underscores)
   - Inline error messages next to fields
   - Prevents submission if validation fails

3. Better Error Handling:
   - Already uses toast notifications (sonner) - kept and improved
   - Parses JSON error responses from server
   - Shows specific field-level errors via Zod
   - Non-blocking error messages

4. Constants Extraction:
   - Created lib/constants/asset-constants.ts with:
     * ASSET_TYPES enum
     * ASSET_STATUSES enum
     * ASSET_CRITICALITY_LEVELS enum
     * Type labels with EN/AR translations
   - Imported in both forms and filters for consistency

5. Accessibility Improvements:
   - Added htmlFor/id associations on labels
   - Added aria-invalid and aria-describedby for errors
   - Added role='alert' on error messages

Tests:
- Added 26 unit tests for validation schemas

Closes #152

* fix(assets): address PR #611 review findings [AGENT-001-A]

HIGH: Make propertyId required in CreateAssetSchema (.min(1))
MEDIUM: Fix i18n regression - use auto() with tKey for all labels
MEDIUM: Add JSDoc to all exported constants and types
LOW: Fix warranty message 'positive' -> 'non-negative'
LOW: Use ASSET_TYPES constant in tests instead of hardcoded array
LOW: Use ASSET_DEFAULTS for coordinates and warranty period


--- a/i18n/chunks/en/fm/assets.json
+++ b/i18n/chunks/en/fm/assets.json
@@ -1,14 +1,24 @@
 {
   "fm.assets.actions.addAsset": "Add Asset",
   "fm.assets.actions.newAsset": "New Asset",
+  "fm.assets.card.actions.deleteLabel": "Delete asset {{name}}",
+  "fm.assets.card.actions.editLabel": "Edit asset {{name}}",
+  "fm.assets.card.actions.viewLabel": "View asset {{name}}",
   "fm.assets.card.category": "Category:",
   "fm.assets.card.criticality": "Criticality:",
+  "fm.assets.card.edit.title": "Edit Asset",
   "fm.assets.card.floor": "Floor {{floor}}",
   "fm.assets.card.lastMaintenance": "Last Maintenance:",
   "fm.assets.card.location": "Location:",
   "fm.assets.card.never": "Never",
   "fm.assets.card.room": "Room {{room}}",
   "fm.assets.card.type": "Type:",
+  "fm.assets.card.view.category": "Category",
+  "fm.assets.card.view.code": "Code",
+  "fm.assets.card.view.criticality": "Criticality",
+  "fm.assets.card.view.location": "Location",
+  "fm.assets.card.view.status": "Status",
+  "fm.assets.card.view.type": "Type",
   "fm.assets.dialog.title": "Add New Asset",
   "fm.assets.empty.subtitle": "Get started by adding your first asset to the registry.",
   "fm.assets.empty.title": "No Assets Found",
@@ -29,10 +39,15 @@
   "fm.assets.filters.types.security": "Security",
   "fm.assets.filters.types.vehicle": "Vehicle",
   "fm.assets.form.actions.submit": "Create Asset",
+  "fm.assets.form.actions.update": "Save Changes",
   "fm.assets.form.criticality.critical": "Critical",
   "fm.assets.form.criticality.high": "High",
   "fm.assets.form.criticality.low": "Low",
   "fm.assets.form.criticality.medium": "Medium",
+  "fm.assets.form.edit.error": "Error updating asset. Please try again.",
+  "fm.assets.form.edit.failed": "Failed to update asset: {{error}}",
+  "fm.assets.form.edit.loading": "Updating asset...",
+  "fm.assets.form.edit.success": "Asset updated successfully",
   "fm.assets.form.error": "Error creating asset. Please try again.",
   "fm.assets.form.errors.noOrg": "No organization ID found",
   "fm.assets.form.failed": "Failed to create asset: {{error}}",
@@ -42,6 +57,7 @@
   "fm.assets.form.labels.manufacturer": "Manufacturer",
   "fm.assets.form.labels.model": "Model",
   "fm.assets.form.labels.name": "Asset Name *",
+  "fm.assets.form.labels.property": "Property *",
   "fm.assets.form.labels.serial": "Serial Number",
   "fm.assets.form.labels.status": "Status",
   "fm.assets.form.labels.type": "Type *",
