--- a/i18n/chunks/ar/fm/assets.json
+++ b/i18n/chunks/ar/fm/assets.json
@@ -1,14 +1,24 @@
 {
   "fm.assets.actions.addAsset": "أضف أصلًا",
   "fm.assets.actions.newAsset": "أصل جديد",
+  "fm.assets.card.actions.deleteLabel": "حذف الأصل {{name}}",
+  "fm.assets.card.actions.editLabel": "تعديل الأصل {{name}}",
+  "fm.assets.card.actions.viewLabel": "عرض الأصل {{name}}",
   "fm.assets.card.category": "الفئة:",
   "fm.assets.card.criticality": "درجة الأهمية:",
+  "fm.assets.card.edit.title": "تعديل الأصل",
   "fm.assets.card.floor": "الطابق {{floor}}",
   "fm.assets.card.lastMaintenance": "آخر صيانة:",
   "fm.assets.card.location": "الموقع:",
   "fm.assets.card.never": "لم يتم أبداً",
   "fm.assets.card.room": "الغرفة {{room}}",
   "fm.assets.card.type": "النوع:",
+  "fm.assets.card.view.category": "الفئة",
+  "fm.assets.card.view.code": "الرمز",
+  "fm.assets.card.view.criticality": "درجة الأهمية",
+  "fm.assets.card.view.location": "الموقع",
+  "fm.assets.card.view.status": "الحالة",
+  "fm.assets.card.view.type": "النوع",
   "fm.assets.dialog.title": "إضافة أصل جديد",
   "fm.assets.empty.subtitle": "ابدأ بإضافة أول أصل إلى السجل.",
   "fm.assets.empty.title": "لا توجد أصول",
@@ -29,10 +39,15 @@
   "fm.assets.filters.types.security": "أمن",
   "fm.assets.filters.types.vehicle": "مركبة",
   "fm.assets.form.actions.submit": "أنشئ الأصل",
+  "fm.assets.form.actions.update": "حفظ التغييرات",
   "fm.assets.form.criticality.critical": "حرجة",
   "fm.assets.form.criticality.high": "مرتفعة",
   "fm.assets.form.criticality.low": "منخفضة",
   "fm.assets.form.criticality.medium": "متوسطة",
+  "fm.assets.form.edit.error": "حدث خطأ أثناء تحديث الأصل. يرجى المحاولة مرة أخرى.",
+  "fm.assets.form.edit.failed": "تعذّر تحديث الأصل: {{error}}",
+  "fm.assets.form.edit.loading": "جارٍ تحديث الأصل...",
+  "fm.assets.form.edit.success": "تم تحديث الأصل بنجاح",
   "fm.assets.form.error": "حدث خطأ أثناء إنشاء الأصل. يرجى المحاولة مرة أخرى.",
   "fm.assets.form.errors.noOrg": "لم يتم العثور على معرف المؤسسة",
   "fm.assets.form.failed": "تعذّر إنشاء الأصل: {{error}}",
@@ -42,6 +57,7 @@
   "fm.assets.form.labels.manufacturer": "المصنّع",
   "fm.assets.form.labels.model": "الطراز",
   "fm.assets.form.labels.name": "اسم الأصل *",
+  "fm.assets.form.labels.property": "العقار *",
   "fm.assets.form.labels.serial": "رقم التسلسل",
   "fm.assets.form.labels.status": "الحالة",
   "fm.assets.form.labels.type": "النوع *",
