feat(superadmin): Enhanced sidebar + notification fix + branding error handling [AGENT-001-A]
## Sidebar Enhancements
- Added collapsible sidebar with auto-hide button
- Grouped navigation into 8 logical categories:
  - Issue Tracking, Organization, Marketplace, System
  - Data Management, Security, Finance, Communication
- Sub-menu expansion with chevron indicators
- Tooltip support when collapsed
- Removed 'Coming Soon' badges from Jobs, Translations, Database, Analytics

## API Fixes
- Notification API now accepts both title/subject and userIds/targetUserIds
- Improved branding API error handling with specific error messages

## i18n
- Added superadmin.groups.* translations for sidebar categories

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -5176,6 +5176,16 @@
       "support": "Support",
       "vendors": "Vendors"
     },
+    "groups": {
+      "ssot": "Issue Tracking",
+      "organization": "Organization",
+      "marketplace": "Marketplace",
+      "system": "System",
+      "data": "Data Management",
+      "security": "Security",
+      "finance": "Finance",
+      "communication": "Communication"
+    },
     "issues": {
       "title": "System Issue Tracker",
       "subtitle": "Full system access • Track and manage all issues",
