feat(superadmin): integrate FM Dashboard into Superadmin panel [AGENT-001-A]
- Created /superadmin/fm-dashboard page with full demo mode support
- Added FM Dashboard to SuperadminSidebar navigation (SSOT group)
- Added i18n translations (EN: FM Dashboard, AR: لوحة إدارة المرافق)
- Updated API routes with demo mode for:
  - /api/compliance/dashboard
  - /api/ai/analytics
  - /api/security/enterprise
  - /api/fm/providers
- Fixed optional chaining for null-safe data access
- TypeScript: 0 errors | ESLint: 0 errors

--- a/i18n/sources/superadmin.translations.json
+++ b/i18n/sources/superadmin.translations.json
@@ -8,6 +8,7 @@
     "superadmin.logout": "Logout",
     "superadmin.loggingOut": "Logging out...",
     "superadmin.verifyingAccess": "Verifying access...",
+    "superadmin.nav.fmDashboard": "FM Dashboard",
     "superadmin.nav.issues": "Issues Tracker",
     "superadmin.nav.ssot": "SSOT Viewer",
     "superadmin.nav.tenants": "Tenants / Orgs",
@@ -124,6 +125,7 @@
     "superadmin.logout": "تسجيل الخروج",
     "superadmin.loggingOut": "جارٍ تسجيل الخروج...",
     "superadmin.verifyingAccess": "جارٍ التحقق من الوصول...",
+    "superadmin.nav.fmDashboard": "لوحة إدارة المرافق",
     "superadmin.nav.issues": "متتبع المشاكل",
     "superadmin.nav.ssot": "عارض SSOT",
     "superadmin.nav.tenants": "المستأجرون / المؤسسات",
